[package]
name = "wasm-demo"
version = "0.1.0"
authors = ["Hao Hou <haohou302@gmail.com>"]
edition = "2018"

[lib]
crate-type=["cdylib"]

[dependencies]
plotters = {path = "../.."}
wasm-bindgen = "0.2"
wee_alloc = "*"
web-sys = "0.3.4"
serde-wasm-bindgen = "0.1.3"
wbg-rand = "0.4"

[profile.release]
lto = true
